Fix menu item visibility in the Library window

--- a/src/chrome/browser/places/organizer.css
+++ b/src/chrome/browser/places/organizer.css
@@ -55,15 +55,16 @@
 }
 
 #placesMenu > menu {
+  border: 1px solid transparent;
   padding-inline-start: 4px;
   padding-inline-end: 1px;
   padding-top: 2px;
   padding-bottom: 2px;
-  border-width: 1px;
 }
 
 #placesMenu > menu[_moz-menuactive="true"] {
   background-color: transparent;
+  color: inherit;
 }
 
 #placesMenu > menu:hover {
